qtwebsockets-opensource-src (5.7.0-1) UNRELEASED; urgency=medium

  [ Simon Quigley ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.7.0.
  * Update debian/copyright.
  * Add Qt_5.7 version tag to debian/libqt5websockets5.symbols.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 Sep 2016 05:25:12 -0500

qtwebsockets-opensource-src (5.6.1-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 13 Jun 2016 11:19:54 -0300

qtwebsockets-opensource-src (5.6.1-1) experimental; urgency=medium

  * New upstream release.
    - Bump Qt build dependencies.
  * Bump Standards-Version to 3.9.8, no changes required.
  * Simplify qtwebsockets5-examples.install, examples have all the same path.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 12 Jun 2016 17:44:20 -0300

qtwebsockets-opensource-src (5.6.0-1) experimental; urgency=medium

  * New upstream release.
  * Drop qtry_compare.patch, applied upstream.
  * Bump Qt build-dependencies to 5.6.0.
  * Drop no longer needed hack to fix wrong path in pkgconfig files.
  * Use https for Vcs fields.
  * Update libqt5websockets5.symbols for 5.6.
  * Bump Standards-Version to 3.9.7, no changes needed.
  * Fix the order of entries in debian/copyright.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 23 Mar 2016 23:23:08 +0100

qtwebsockets-opensource-src (5.5.1-4) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 21 Oct 2015 21:55:01 -0300

qtwebsockets-opensource-src (5.5.1-3) experimental; urgency=medium

  * Fix previous upload by adding the missing semicolon.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 19 Oct 2015 14:13:00 +0300

qtwebsockets-opensource-src (5.5.1-2) experimental; urgency=medium

  * Use QTRY_COMPARE in a couple of places to make the tests less flaky
    (qtry_compare.patch).
