@@ -6,6 +6,9 @@ qtwebsockets-opensource-src (5.7.0-1) UNRELEASED; urgency=medium
   * Update debian/copyright.
   * Add Qt_5.7 version tag to debian/libqt5websockets5.symbols.
 
+  [ Dmitry Shachnev ]
+  * Switch to automatic dbgsym packages.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 Sep 2016 05:25:12 -0500
 
 qtwebsockets-opensource-src (5.6.1-2) unstable; urgency=medium
